--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1801,8 +1801,8 @@ select[multiple].input-lg {
 }
 @font-face {
   font-family: 'Segoe';
-  src: url('../fonts/SegoeUISemiBold/SegoeUISemoBold.eot');
-  src: url('../fonts/SegoeUISemiBold/SegoeUISemoBold.eot?#iefix') format('embedded-opentype'), url('../fonts/SegoeUISemiBold/SegoeUISemoBold.woff') format('woff'), url('../fonts/SegoeUISemiBold/SegoeUISemoBold.ttf') format('truetype'), url('../fonts/SegoeUISemiBold/SegoeUISemoBold.svg#Segoe') format('svg');
+  src: url('../fonts/SegoeUISemiBold/SegoeUISemiBold.eot');
+  src: url('../fonts/SegoeUISemiBold/SegoeUISemiBold.eot?#iefix') format('embedded-opentype'), url('../fonts/SegoeUISemiBold/SegoeUISemiBold.woff') format('woff'), url('../fonts/SegoeUISemiBold/SegoeUISemiBold.ttf') format('truetype'), url('../fonts/SegoeUISemiBold/SegoeUISemiBold.svg#Segoe') format('svg');
   font-weight: 500;
   font-style: normal;
 }
@@ -1909,6 +1909,10 @@ body {
 }
 .site-header img {
   margin-top: 7.5px;
+  transition: all 0.3s linear;
+}
+.site-header img:hover {
+  transform: scale(1.1);
 }
 .site-nav {
   background-color: #48525a;
@@ -1944,6 +1948,10 @@ body {
   height: 2px;
   background-color: #fff;
   margin-top: 11px;
+  transition: width 0.5s linear;
+}
+.stn-heading:hover::after {
+  width: 95px;
 }
 .stn-heading.black-line::after {
   background-color: #515f67;
@@ -1964,4 +1972,101 @@ body {
   .stn-services [class^="col-"] {
     margin-bottom: 50px;
   }
+}
+.stn-portfolio .horizontal-nav {
+  float: right;
+}
+.stn-portfolio .stn-heading {
+  margin-bottom: 80px;
+  margin-left: -15px;
+}
+.thumbs-row {
+  min-height: 570px;
+}
+.thumbs-row [class^="col-"] {
+  margin-bottom: 30px;
+}
+.thumbs-row a {
+  display: block;
+  height: 270px;
+  background-color: #979797;
+  position: relative;
+  opacity: .8;
+  color: #fff;
+  font-size: 72px;
+  text-align: center;
+  font-weight: 200;
+}
+.thumbs-row a::after {
+  position: absolute;
+  content: '+';
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #454e56;
+  background-color: rgba(69, 78, 86, 0.8);
+  line-height: 1;
+  opacity: 0;
+  transition: all 0.5s ease-in-out;
+}
+.thumbs-row a:hover::after {
+  opacity: 1;
+  line-height: 3.75;
+}
+.thumb-1 {
+  background-image: url('../img/thumb-1.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: scroll;
+}
+.thumb-2 {
+  background-image: url('../img/thumb-2.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: scroll;
+}
+.thumb-3 {
+  background-image: url('../img/thumb-3.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: scroll;
+}
+.thumb-4 {
+  background-image: url('../img/thumb-4.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: scroll;
+}
+.thumb-5 {
+  background-image: url('../img/thumb-5.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: scroll;
+}
+.thumb-6 {
+  background-image: url('../img/thumb-6.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: scroll;
+}
+.thumb-7 {
+  background-image: url('../img/thumb-7.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: scroll;
+}
+.thumb-8 {
+  background-image: url('../img/thumb-8.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: scroll;
 }
