--- a/app/less/pages/index.less
+++ b/app/less/pages/index.less
@@ -5,6 +5,10 @@
 
   img {
     margin-top: (38px - 23px )/2;
+    transition: all 0.3s linear;
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 }
 .site-nav {
@@ -40,13 +44,18 @@
   margin-bottom: 40px;
   margin-top: 0;
   line-height: 1;
+
   &::after {
     content: '';
     width: 45px;
     height: 2px;
     background-color: #fff;
     margin-top: 11px;
+    transition: width 0.5s linear;
 
+  }
+  &:hover::after {
+    width: 95px;
   }
   &.black-line::after {
     background-color: @font;
@@ -75,4 +84,79 @@
 // Portfolio
 .stn-portfolio {
   &:extend(.stn-padding);
+  .horizontal-nav {
+    float: right;
+  }
+  .stn-heading {
+    margin-bottom: 80px;
+    margin-left: -15px;
+  }
+}
+
+.thumbs-row {
+  min-height: 570px;
+  [class^="col-"] {
+    margin-bottom: 30px;
+  }
+
+  a {
+    display: block;
+    height: 270px;
+    background-color: #979797;
+    position: relative;
+    opacity: .8;
+    color: #fff;
+    font-size: 72px;
+    text-align: center;
+    font-weight: 200;
+    &::after {
+      position: absolute;
+      content: '+';
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #454e56;
+      background-color: fade(#454e56, 80%);
+      line-height: 1;
+      opacity: 0;
+      transition: all 0.5s ease-in-out;
+    }
+    &:hover::after {
+      opacity: 1;
+      line-height: 270 / 72;
+    }
+  }
+}
+
+.thumb-1 {
+  .bg-img('thumb-1.jpg');
+}
+
+.thumb-2 {
+  .bg-img('thumb-2.jpg');
+}
+
+.thumb-3 {
+  .bg-img('thumb-3.jpg');
+}
+
+.thumb-4 {
+  .bg-img('thumb-4.jpg');
+}
+
+.thumb-5 {
+  .bg-img('thumb-5.jpg');
+}
+
+.thumb-6 {
+  .bg-img('thumb-6.jpg');
+}
+
+.thumb-7 {
+  .bg-img('thumb-7.jpg');
+}
+
+.thumb-8 {
+  .bg-img('thumb-8.jpg');
 }
