Верстка секции Video, Twitter

--- a/app/less/pages/index.less
+++ b/app/less/pages/index.less
@@ -160,3 +160,39 @@
 .thumb-8 {
   .bg-img('thumb-8.jpg');
 }
+
+// section-video
+.stn-video {
+  &:extend(.stn-padding);
+  background-color: @font;
+  color: #fff;
+  .btn-ghost-grey {
+    margin-bottom: 50px;
+  }
+}
+.stn-video-col {
+  margin-top: -80px;
+  @media (max-width: 992px) {
+    margin-top: 0;
+  }
+}
+
+// Twitter
+
+.stn-twitter {
+  &:extend(.stn-padding);
+  background-color: @accent;
+  color: #fff;
+  p {
+    font-size: 2em;
+    font-weight: 300;
+  }
+  strong {
+    font-weight: 500;
+  }
+}
+
+.stn-twitter-icon {
+  font-size: 24px;
+  float: right;
+}
