--- a/app/less/components/interface.less
+++ b/app/less/components/interface.less
@@ -30,3 +30,41 @@
     color: @font;
   }
 }
+
+//  iframe response
+.videoWrapper {
+  position: relative;
+  padding-bottom: 56.25%;   //16:9
+  padding-top: 25px;
+  height: 0;
+}
+.videoWrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+//  btn
+
+.btn-ghost(@c:#353f46, @c-hover:#fff,@font:1em) {
+  display: inline-block;
+  text-transform: uppercase;
+  font-weight: 600;
+  color: @c;
+  border: 2px solid @c;
+  line-height: 1;
+  padding: 1.07em 2.857em;
+  font-size: @font;
+  transition: all .8s ease-in-out;
+  &:hover {
+    text-decoration: none;
+    color: @c-hover;
+    border-color: @c-hover;
+  }
+}
+
+.btn-ghost-grey {
+  .btn-ghost();
+}
