--- a/app/less/components/interface.less
+++ b/app/less/components/interface.less
@@ -31,6 +31,63 @@
   }
 }
 
+//Response
+.main-nav-trigger {
+  display: none;
+  font-size: 45px;
+  color: #fff;
+  float: right;
+  line-height: 1;
+  cursor: pointer;
+  transition: color 0.3s ease-in-out;
+  &:hover {
+    color: @accent;
+  }
+}
+@media  screen and (max-width:992px){
+  .main-nav-trigger {
+    display: block;
+  }
+  .main-logo {
+    float: left;
+  }
+  .site-nav {
+    position: relative;
+  }
+  .site-nav .horizontal-nav {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: @overlay;
+    li {
+      display: block;
+      width: 100%;
+      margin-left: 0;
+      text-align: center;
+      border-bottom: 1px solid lighten(@overlay, 10%);
+    }
+    a {
+      display: inline-block;
+      padding: 15px;
+      &.active {
+        border-color: transparent;
+      }
+    }
+
+  }
+  .tab-wrapper .tab-menu {
+    position: relative;
+    top: 100px;
+    left: 0;
+    li {
+      padding-right: 20px;
+    }
+
+    }
+}
+
 //  iframe response
 .videoWrapper {
   position: relative;
@@ -67,4 +124,41 @@
 
 .btn-ghost-grey {
   .btn-ghost();
+}
+
+//Form
+
+.frm-group {
+  margin-bottom: 35px;
+}
+label {
+  display: block;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+.frm-control {
+  background-color: transparent;
+  border: 2px solid #fff;
+  height: 60px;
+  width: 100%;
+  padding: 0 15px;
+}
+
+textarea.frm-control {
+  height: 215px;
+}
+.btn-submit {
+  width: 100%;
+  background-color: @accent;
+  border: none;
+  text-transform: uppercase;
+  line-height: 1;
+  font-weight: 600;
+  padding: 25px 0;
+  border: 2px solid @accent;
+  transition: all .3s ease-in-out;
+  &:hover{
+    background-color: transparent;
+    color: @accent;
+  }
 }
