--- a/app/less/components/icons.less
+++ b/app/less/components/icons.less
@@ -62,19 +62,18 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-twitter:before
-{
-    content: '\f099';
+.icon-quote:before {
+  content: "\1f32b";
 }
-.icon-google-plus:before
-{
-    content: '\f0d5';
+.icon-twitter:before {
+  content: "\f099";
 }
-.icon-coffee:before
-{
-    content: '\f0f4';
+.icon-google-plus:before {
+  content: "\f0d5";
 }
-.icon-dribbble:before
-{
-    content: '\f17d';
+.icon-coffee:before {
+  content: "\f0f4";
+}
+.icon-dribbble:before {
+  content: "\f17d";
 }
