--- a/app/less/components/interface.less
+++ b/app/less/components/interface.less
@@ -87,7 +87,21 @@
 
     }
 }
+@media  screen and (max-width:741px) {
+    .tab-wrapper .tab-menu {
+    position: relative;
+    top: 90px;
+    left: 0;
+    li {
+      
+        a {
+            border: none;
+           padding: 1px; 
+        }
+    }
 
+    }
+}
 //  iframe response
 .videoWrapper {
   position: relative;
